Change top mobile ad back to 100px, and fix From Scratch buy button on mobile

--- a/style.css
+++ b/style.css
@@ -1094,7 +1094,7 @@ br,
 	}
 
 	.ok-content-ad {
-		height: 50px;
+		height: 100px;
 		margin-top: 32px;
 		margin-bottom: -16px;
 	}
